# oc_p9

./: .gitignore  FAQ.MD  FAQ.md  LICENSE  README.md  RESEARCH.md  TODO.MD  TODO.md  p9.code-workspace
backend/: README.md  classes.py  constants.py  main.py  notebook-back.ipynb  (+1 more)
notebook-torch/: constants.py  experiment.ipynb  pyproject.toml  sandbox.ipynb
notebook-torch/runs/20250501-085946_vit-base-patch16-224-in21k/: events.out.tfevents.1746082786.DESKTOP-KGLKRA0.3761.2
notebook-torch/runs/20250501-090019_vit-base-patch16-224-in21k/: events.out.tfevents.1746082819.DESKTOP-KGLKRA0.3761.3
notebook-torch/runs/20250501-093004_vit-base-patch16-224-in21k/: events.out.tfevents.1746084604.DESKTOP-KGLKRA0.3761.4
notebook-torch/runs/20250501-093151_vit-base-patch16-224-in21k/: events.out.tfevents.1746084711.DESKTOP-KGLKRA0.14751.0
notebook-torch/runs/20250501-101235_vit-base-patch16-224-in21k_vit-base-patch16-224-in21k/: events.out.tfevents.1746087155.DESKTOP-KGLKRA0.14751.1
notebook-torch/runs/20250501-105147_vit-base-patch16-224-in21k_vit-base-patch16-224-in21k/: events.out.tfevents.1746089507.DESKTOP-KGLKRA0.14751.2
notebook-torch/runs/20250501-110644_vit-base-patch16-224-in21k_vit-base-patch16-224-in21k/: events.out.tfevents.1746090404.DESKTOP-KGLKRA0.14751.3
notebook-torch/runs/20250501-111217_vit-base-patch16-224-in21k_vit-base-patch16-224-in21k/: events.out.tfevents.1746090737.DESKTOP-KGLKRA0.14751.4
notebook-torch/runs/20250501-112355_vit-base-patch16-224-in21k_vit-base-patch16-224-in21k/: events.out.tfevents.1746091435.DESKTOP-KGLKRA0.14751.5
(+52 files in other folders)
