[project]
name = "notebook-torch"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "mambavision>=1.1.0",
    "matplotlib>=3.10.1",
    "pandas>=2.2.3",
    "scikit-learn>=1.6.1",
    "tabulate>=0.9.0",
    "tensorboard>=2.19.0",
    "torch==2.6",
]

[dependency-groups]
notebook = [
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.6",
]
